--- a/package.json
+++ b/package.json
@@ -13,19 +13,28 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/register": "^7.12.1",
     "axios": "^0.21.0",
+    "babel-polyfill": "^6.26.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.23.0",
     "config": "^3.3.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.11",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.10.15",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.2.0",
     "path": "^0.12.7",
+    "socket.io": "^3.0.3",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
